2007-01-15  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): add C-SPC binding. bind lastmsg to M. bind mark to m and C-m
	("fselect"): make arg non-optional
	("mark"): new command
	("clear-marks"): likewise
	("pull-marked"): likewise

	* primitives.lisp (window): new slot marked
	(screen): new slot marked-gc
	(*window-formatters*): add formatter #\m
	(*window-format*): add %m

	* mode-line.lisp (make-mode-line-window): add :exposure to event mask

	* core.lisp (fmt-window-marked): new function
	(update-window-mark): likewise
	(marked-windows): likewise
	(clear-window-marks): likewise
	(show-frame-indicator): don't draw it if there's only 1 frame
	(init-screen): initialise marked-gc
	(:exposure): new event handler

2007-01-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (focus-forward): add predicate function
	(other-hidden-window): fix hidden windows predicate function
	("pull-hidden-next"): pass predicate function to focus-forward
	("pull-hidden-previous"): likewise
	("prev-in-frame"): call frame-sort-windows
	("next-in-frame"): likewise
	("command-mode"): new command
	("abort"): pop the top map

	* primitives.lisp (format-expand): handle the case when % is the
	last char in the string.

	* user.lisp (*root-map*): bind pull-hidden-next,
	pull-hidden-previous, pull-hidden-other, other-in-frame,
	next-in-frame, prev-in-frame
	(pull-window): new function
	(focus-forward): new argument pull-p. use pull-window
	(pull-window-by-number): use pull-window
	(other-hidden-window): new function
	(other-window-in-frame): likewise
	("pull-hidden-next"): new command
	("pull-hidden-previous"): likewise
	("pull-hidden-other"): likewise
	("next-in-frame"): likewise
	("prev-in-frame"): likewise
	("other-in-frame"): likewise
	(other-window): use the group's window list to find the other
	window.
	("other"): show the frame indicator if a frame switch occurred.

2007-01-11  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("putsel"): new command
	("getsel"): likewise
